fix:修复 Modal 组件在 visible 为 true 时，Modal 窗口的位置错位的 bug

--- a/components/Modal/style/index.less
+++ b/components/Modal/style/index.less
@@ -11,7 +11,7 @@
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.2);
-    opacity: 0;
+    opacity: 1;
     &-enter {
       opacity: 0;
     }
@@ -43,6 +43,7 @@
     min-height: 200px;
     border-radius: 8px;
     box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.2);
+    transform: translate(-50%, -50%);
     &-enter {
       transform: translate(-50%, -60%);
       opacity: 0;
